[metadata]
name = hp_procurvearuba
version = 2.0.0
author = Adeel Rauf
author_email = adraf2000@gmail.com
description = Provides a class with custom functions for easy management of hp procurve and aruba switches
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adraf82/hp_procurvearuba
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
        = src
packages = find:
python_requires = >=3.6
install_requires=
           appdirs==1.4.4
           attrs==20.3.0
           bcrypt==3.2.0
           black==20.8b1
           bleach==5.0.0
           build==0.7.0
           certifi==2021.10.8
           cffi==1.14.4
           charset-normalizer==2.0.12
           click==7.1.2
           commonmark==0.9.1
           cryptography==3.3.1
           docutils==0.18.1
           forwardable==0.4.1
           future==0.18.2
           hp-procurvearuba==1.1.0
           idna==3.3
           importlib-metadata==3.3.0
           importlib-resources==3.3.0
           iniconfig==1.1.1
           jeepney==0.8.0
           keyring==23.5.0
           mccabe==0.6.1
           mock==4.0.3
           mypy-extensions==0.4.3
           netmiko==4.1.2
           ntc-templates==3.0.0
           packaging==20.8
           paramiko==2.7.2
           pathspec==0.8.1
           pep517==0.12.0
           pkginfo==1.8.2
           pluggy==0.13.1
           py==1.10.0
           pycodestyle==2.6.0
           pycparser==2.20
           pydocstyle==6.1.1
           pyflakes==2.3.1
           Pygments==2.12.0
           pylama==7.7.1
           PyNaCl==1.4.0
           pyparsing==2.4.7
           pyserial==3.5
           pytest==6.2.0
           pytest-mock==3.5.1
           PyYAML==5.3.1
           readme-renderer==35.0
           regex==2020.11.13
           requests==2.27.1
           requests-toolbelt==0.9.1
           rfc3986==2.0.0
           rich==12.4.1
           scp==0.13.3
           SecretStorage==3.3.2
           six==1.15.0
           snowballstemmer==2.1.0
           tenacity==6.2.0
           textfsm==1.1.2
           toml==0.10.2
           tomli==2.0.1
           twine==4.0.0
           typed-ast==1.4.2
           typing-extensions==3.7.4.3
           urllib3==1.26.9
           webencodings==0.5.1
           zipp==3.4.0


[options.packages.find]
where = src

[pylama]
linters= pycodestyle,pyflakes

[pylama:pycodestyle]
max_line_length = 100
